Extract helper method to package. Add Strategy DP implementation.

--- a/DesignPatternPractice/DesignPatternPractice.csproj
+++ b/DesignPatternPractice/DesignPatternPractice.csproj
@@ -8,4 +8,12 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Memento\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MorganMWJ.Helpers" Version="1.0.0" />
+  </ItemGroup>
+
 </Project>
